--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/parthapaul7/onedf_frontend",
   "name": "my_onedf_app",
   "private": true,
   "version": "0.0.0",
